# se-toolkit-hackaton

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: db.py  main.py  planner.py  repository.py  schemas.py
static/: app.js  index.html  styles.css
task5/: DEMO_SCRIPT_2MIN.md  LINKS_AND_QR.md  TASK5_PRESENTATION.md
tests/: test_planner.py  test_user_isolation.py
