[project]
name = "deadline-coach"
version = "0.1.0"
description = "Deadline Coach Version 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
